welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value bsmile
  if(aSmile == true && bsmile==true){return true}
                       ^monkeyTrouble:3: error: not found: value bsmile
  if(aSmile == false && bsmile==false){return true}
                        ^